# AQ-project

./: README.md
crea_air_quality_energy_ds_v3/: .gitignore  pyproject.toml
crea_air_quality_energy_ds_v3/data/raw/: eu_power_mix_long.csv
crea_air_quality_energy_ds_v3/src/crea_ds/: __init__.py  cli.py  dashboard_entry.py
crea_air_quality_energy_ds_v3/src/crea_ds.egg-info/: SOURCES.txt  requires.txt  top_level.txt
crea_air_quality_energy_ds_v3/src/crea_ds/dashboard/: Home.py
crea_air_quality_energy_ds_v3/src/crea_ds/dashboard/pages/: 01_Air_Quality_Overview.py  02_City_Views.py
crea_air_quality_energy_ds_v3/src/crea_ds/data/: processing.py
crea_air_quality_energy_ds_v3/src/crea_ds/energy/: emissions.py
crea_air_quality_energy_ds_v3/src/crea_ds/viz/: energy_plots.py
crea_air_quality_energy_ds_v3/streamlit/: config.toml
src/crea_ds.egg-info/: PKG-INFO  entry_points.txt
src/crea_ds/dashboard/: utils.py
src/crea_ds/dashboard/pages/: 03_Diagnostics.py  04_Energy.py
src/crea_ds/data/: utils.py
src/crea_ds/modeling/: deweather.py  report_tools.py
